added lock icons & updated styling

--- a/index.html
+++ b/index.html
@@ -18,20 +18,105 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/de526580d2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="jumbotron col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3 text-center">
+    <header class="jumbotron bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3 text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    </div>
+      <div class="container">
+        <div class="row text-center">
+          <div class="time-box col-2 border text-end">
+            9:00 AM
+          </div>
+          <div class="task-box col-9 border bg-secondary text-start">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            10:00 AM
+          </div>
+          <div class="task-box col-9 border bg-secondary align-content-center">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            11:00 AM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            12:00 PM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            1:00 PM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            2:00 PM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            3:00 PM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            4:00 PM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="time-box col-2 border text-end">
+            5:00 PM
+          </div>
+          <div class="task-box col-9 border bg-secondary">
+            TO DO
+          </div>
+          <div class="lock-box col-1 border rounded-end bg-info">
+            <i class="fas fa-lock"></i>
+          </div>
 
+        </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
