added input with focus for tasks

--- a/index.html
+++ b/index.html
@@ -31,90 +31,89 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="container">
-        <div class="row text-center">
-          <div class="time-box col-2 border text-end">
-            9:00 AM
+      <div class="container ">
+        <div class="row text-center d-flex flex-row">
+          <!-- 9am task start -->
+          <div class="time-box col-2 border">
+            9AM
           </div>
-          <div class="task-box col-9 border bg-secondary text-start">
-            TO DO
+          <div id="due-9" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(9)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
+          <!-- 9a, task end -->
+          <!-- 10am task start -->
+          <div class=" time-box col-2 border">
+            10AM
           </div>
-          <div class="time-box col-2 border text-end">
-            10:00 AM
+          <div id="due-10" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(10)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="task-box col-9 border bg-secondary align-content-center">
-            TO DO
+          <!-- 10am task end -->
+          <!-- 11am task start -->
+          <div class="time-box col-2 border">
+            11AM
           </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
+          <div id="due-11" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(11)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="time-box col-2 border text-end">
-            11:00 AM
+          <!-- 11am task end -->
+          <!-- 12pm task start -->
+          <div class="time-box col-2 border">
+            12PM
           </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
+          <div id="due-12" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(12)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
+          <!-- 12pm task end -->
+          <!-- 1pm task start -->
+          <div class="time-box col-2 border">
+            1PM
           </div>
-          <div class="time-box col-2 border text-end">
-            12:00 PM
+          <div id="due-13" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(13)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
+          <!-- 1pm task end -->
+          <!-- 2pm task start -->
+          <div class="time-box col-2 border">
+            2PM
           </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
+          <div id="due-14" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(14)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="time-box col-2 border text-end">
-            1:00 PM
+          <!-- 2pm task end -->
+          <!-- 3pm task start -->
+          <div class="time-box col-2 border">
+            3PM
           </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
+          <div id="due-15" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(15)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
+          <!-- 3pm task end -->
+          <!-- 4pm task start -->
+          <div class="time-box col-2 border">
+            4PM
           </div>
-          <div class="time-box col-2 border text-end">
-            2:00 PM
+          <div id="due-16" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(16)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
+          <!-- 4pm task end -->
+          <!-- 5pm task start -->
+          <div class="time-box col-2 border">
+            5PM
           </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
+          <div id="due-17" class="task-box task-box-item col-9 border"></div>
+          <div class="lock-box col-1 border bg-info">
+            <a onclick="saveTasks(17)"><i class="fas fa-lock"></i></a>
           </div>
-          <div class="time-box col-2 border text-end">
-            3:00 PM
-          </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
-          </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
-          </div>
-          <div class="time-box col-2 border text-end">
-            4:00 PM
-          </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
-          </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
-          </div>
-          <div class="time-box col-2 border text-end">
-            5:00 PM
-          </div>
-          <div class="task-box col-9 border bg-secondary">
-            TO DO
-          </div>
-          <div class="lock-box col-1 border rounded-end bg-info">
-            <i class="fas fa-lock"></i>
-          </div>
-
+          <!-- 5pm task end -->
         </div>
       </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
