added submit function- doesnt work

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div id="due-9" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(9)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 9a, task end -->
           <!-- 10am task start -->
@@ -48,7 +48,7 @@
           </div>
           <div id="due-10" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(10)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 10am task end -->
           <!-- 11am task start -->
@@ -57,7 +57,7 @@
           </div>
           <div id="due-11" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(11)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 11am task end -->
           <!-- 12pm task start -->
@@ -66,7 +66,7 @@
           </div>
           <div id="due-12" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(12)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 12pm task end -->
           <!-- 1pm task start -->
@@ -75,7 +75,7 @@
           </div>
           <div id="due-13" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(13)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 1pm task end -->
           <!-- 2pm task start -->
@@ -84,7 +84,7 @@
           </div>
           <div id="due-14" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(14)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 2pm task end -->
           <!-- 3pm task start -->
@@ -93,7 +93,7 @@
           </div>
           <div id="due-15" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(15)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 3pm task end -->
           <!-- 4pm task start -->
@@ -102,7 +102,7 @@
           </div>
           <div id="due-16" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(16)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 4pm task end -->
           <!-- 5pm task start -->
@@ -111,7 +111,7 @@
           </div>
           <div id="due-17" class="task-box task-box-item col-9 border"></div>
           <div class="lock-box col-1 border bg-info">
-            <a onclick="saveTasks(17)"><i class="fas fa-lock"></i></a>
+              <i class="fas fa-lock"></i></a>
           </div>
           <!-- 5pm task end -->
         </div>
