completed click and localStorage functions

--- a/index.html
+++ b/index.html
@@ -32,89 +32,105 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="container ">
-        <div class="row text-center d-flex flex-row">
           <!-- 9am task start -->
-          <div class="time-box col-2 border">
-            9AM
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              9AM
+            </div>
+            <textarea id="due-9" class="task-box task-box-item col-9 border"></textarea>
+            <button id="9" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
-          <div id="due-9" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
-          </div>
-          <!-- 9a, task end -->
+          <!-- 9am task end -->
           <!-- 10am task start -->
-          <div class=" time-box col-2 border">
-            10AM
-          </div>
-          <div id="due-10" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class=" time-box col-2 border">
+              10AM
+            </div>
+            <textarea id="due-10" class="task-box task-box-item col-9 border"></textarea>
+            <button id="10" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 10am task end -->
           <!-- 11am task start -->
-          <div class="time-box col-2 border">
-            11AM
-          </div>
-          <div id="due-11" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              11AM
+            </div>
+            <textarea id="due-11" class="task-box task-box-item col-9 border"></textarea>
+            <button id="11" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 11am task end -->
           <!-- 12pm task start -->
-          <div class="time-box col-2 border">
-            12PM
-          </div>
-          <div id="due-12" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              12PM
+            </div>
+            <textarea id="due-12" class="task-box task-box-item col-9 border"></textarea>
+            <button id="12" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 12pm task end -->
           <!-- 1pm task start -->
-          <div class="time-box col-2 border">
-            1PM
-          </div>
-          <div id="due-13" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              1PM
+            </div>
+            <textarea id="due-13" class="task-box task-box-item col-9 border"></textarea>
+            <button id="13" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 1pm task end -->
           <!-- 2pm task start -->
-          <div class="time-box col-2 border">
-            2PM
-          </div>
-          <div id="due-14" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              2PM
+            </div>
+            <textarea id="due-14" class="task-box task-box-item col-9 border"></textarea>
+            <button id="14" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 2pm task end -->
           <!-- 3pm task start -->
-          <div class="time-box col-2 border">
-            3PM
-          </div>
-          <div id="due-15" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              3PM
+            </div>
+            <textarea id="due-15" class="task-box task-box-item col-9 border"></textarea>
+            <button id="15" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 3pm task end -->
           <!-- 4pm task start -->
-          <div class="time-box col-2 border">
-            4PM
-          </div>
-          <div id="due-16" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              4PM
+            </div>
+            <textarea id="due-16" class="task-box task-box-item col-9 border"></textarea>
+            <button id="16" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 4pm task end -->
           <!-- 5pm task start -->
-          <div class="time-box col-2 border">
-            5PM
-          </div>
-          <div id="due-17" class="task-box task-box-item col-9 border"></div>
-          <div class="lock-box col-1 border bg-info">
-              <i class="fas fa-lock"></i></a>
+          <div class="row text-center d-flex flex-row">
+            <div class="time-box col-2 border">
+              5PM
+            </div>
+            <textarea id="due-17" class="task-box task-box-item col-9 border"></textarea>
+            <button id="17" class="lock-box col-1 border bg-info">
+                <i class="fas fa-lock"></i></a>
+            </button>
           </div>
           <!-- 5pm task end -->
-        </div>
       </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
