changed column sizes

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <div class="container ">
           <!-- 9am task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               9AM
             </div>
-            <textarea id="due-9" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-9" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="9" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -45,10 +45,10 @@
           <!-- 9am task end -->
           <!-- 10am task start -->
           <div class="row text-center d-flex flex-row">
-            <div class=" time-box col-2 border">
+            <div class=" time-box col-1 border">
               10AM
             </div>
-            <textarea id="due-10" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-10" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="10" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -56,10 +56,10 @@
           <!-- 10am task end -->
           <!-- 11am task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               11AM
             </div>
-            <textarea id="due-11" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-11" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="11" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -67,10 +67,10 @@
           <!-- 11am task end -->
           <!-- 12pm task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               12PM
             </div>
-            <textarea id="due-12" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-12" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="12" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -78,10 +78,10 @@
           <!-- 12pm task end -->
           <!-- 1pm task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               1PM
             </div>
-            <textarea id="due-13" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-13" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="13" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -89,10 +89,10 @@
           <!-- 1pm task end -->
           <!-- 2pm task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               2PM
             </div>
-            <textarea id="due-14" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-14" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="14" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -100,10 +100,10 @@
           <!-- 2pm task end -->
           <!-- 3pm task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               3PM
             </div>
-            <textarea id="due-15" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-15" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="15" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -111,10 +111,10 @@
           <!-- 3pm task end -->
           <!-- 4pm task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               4PM
             </div>
-            <textarea id="due-16" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-16" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="16" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
@@ -122,10 +122,10 @@
           <!-- 4pm task end -->
           <!-- 5pm task start -->
           <div class="row text-center d-flex flex-row">
-            <div class="time-box col-2 border">
+            <div class="time-box col-1 border">
               5PM
             </div>
-            <textarea id="due-17" class="task-box task-box-item col-9 border"></textarea>
+            <textarea id="due-17" class="task-box task-box-item col-10 border text-white"></textarea>
             <button id="17" class="lock-box col-1 border bg-info">
                 <i class="fas fa-lock"></i></a>
             </button>
